debuging graph